# vibelive

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.nginx  README.md  docker-compose.yml  generate_multitrack.sh  nginx.conf  nginx.docker.conf  nginx.local.conf  package-lock.json  test.sh  test_auto.sh  test_color_space.sh  test_e2e.sh  test_multitrack.sh
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: style.css
frontend/src/api/: client.ts  streams.ts
frontend/src/components/: NavStatus.vue  Player.vue  RecordingCard.vue  RecordingGridCard.vue  RecordingPlayer.vue  RecordingsList.vue  StreamCard.vue  StreamInfo.vue  ThumbnailImg.vue
frontend/src/components/player/: DebugOverlay.vue  ProgressBar.vue  SettingsMenu.vue  TrackSelector.vue  VolumeControl.vue
frontend/src/components/ui/: BaseBadge.vue  BaseButton.vue  BaseCard.vue  BaseCodeBlock.vue  BaseEmptyState.vue  (+4 more)
frontend/src/composables/: playerGestures.ts  playerKeyboard.ts  playerVolume.ts  useClipboard.ts  usePlayer.ts  usePolling.ts  useRelativeTime.ts  useStream.ts  useStreamList.ts  useThumbnailSrcset.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: stream.ts
frontend/src/types/: index.ts
frontend/src/utils/: clipboard.ts  deepEqual.ts  format.ts
frontend/src/views/: Home.vue  LiveWatch.vue  NotFound.vue  Recordings.vue
server/: Cargo.toml  Dockerfile
server/src/: disk_writer.rs  main.rs  thumbnail.rs  util.rs
server/src/api/: mod.rs  recordings.rs  streams.rs
server/src/config/: mod.rs
server/src/hls/: fmp4.rs  mod.rs  mpegts.rs  playlist.rs
server/src/hls/fmp4/: codec.rs  mod.rs
server/src/recording/: mod.rs
server/src/rtmp/: amf.rs  color.rs  enhanced.rs  mod.rs  server.rs  session.rs  stream.rs
tests/: edts_check.py  hdr_boxes.py  passthrough.py  regen_thumbnails.sh  stts_check.py  timing_check.py
