[package]
name = "livestream-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rml_rtmp = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
thiserror = "2"
anyhow = "1"

rand = "0.8"
bytes = "1"
