[package]
name = "livestream-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rml_rtmp = "0.8"
rml_amf0 = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
anyhow = "1"
